--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
 
 <body>
     <div class="container">
+
         <header class="header">
-            <nav class="navBar"><i class="fas fa-bars"></i></nav>
+            <div class="navBut"><i class="fas fa-bars"></i></div>
             <div class="playerName" id="p1Name"><h2>PLAYER ONE</h2></div>
             <div class="playerScore" id="p1Score"><h2>0</h2></div>
             <div class="playerName" id="p2Name"><h2>PLAYER TWO</h2></div>
             <div class="playerScore" id="p2Score"><h2>0</h2></div>
         </header>
+
+       <!--  <nav class="navSlider">
+            <ul>
+                <li>PLAYER ONE NAME</li>
+                <li><input type="text" id="p1name"><button type="submit"></button></li>
+                <li>PLAYER TWO NAME</li>
+                <li><input type="text" id="p2name"><button type="submit"></button></li>
+                <li>COMPUTER PLAYER</li>
+                <li>SOUND EFFECTS</li>
+            </ul>
+        </nav> -->
 
 
         <main class="main">
@@ -33,7 +45,7 @@
             </aside>
 
             <section class="gameGrid">
-                <div class="gridSection" id="sectionOne" value="1">X</div>
+                <div class="gridSection" id="sectionOne" value="1"></div>
                 <div class="gridSection" id="sectionTwo" value="2"></div>
                 <div class="gridSection" id="sectionThree" value="3"></div>
                 <div class="gridSection" id="sectionFour" value="4"></div>
