Added function to start game and new turn. Need to consider how to get the display to flow from one message to another in a given time. Need to consider how to activate and de-activate game cells, then make a place counter function.

--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
         </div>
 
         <main class="main" id="main">
-            <aside>
+            <aside class="aside">
                 <section class="titleArea">
                     <h1>John's Tic Tac Toe Game</h1>
                 </section>
                 <section class="messageBoard" id="messageBoard">
-                    <h2>PLAYER ONE READY?</h2>
+                    <h2>ARE YOU READY TO PLAY?</h2>
                 </section>
+                <input type="button" value="Start Game" id="start">
             </aside>
 
             <section class="gameGrid">
