Majority of functionality has been added to game, however I think the code itself is like some lumbering unweildy beast. I think the the code could be refactored as there is a lot of repetition for each of the 9 cells.  Remaining work is a GameWon and gameDrawn function, and an incrementor for the player scores.

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
             </aside>
 
             <section class="gameGrid">
-                <div class="gridSection" id="sectionOne" value="1"></div>
-                <div class="gridSection" id="sectionTwo" value="2"></div>
-                <div class="gridSection" id="sectionThree" value="3"></div>
-                <div class="gridSection" id="sectionFour" value="4"></div>
-                <div class="gridSection" id="sectionFive" value="5"></div>
-                <div class="gridSection" id="sectionSix" value="6"></div>
-                <div class="gridSection" id="sectionSeven" value="7"></div>
-                <div class="gridSection" id="sectionEight" value="8"></div>
-                <div class="gridSection" id="sectionNine" value="9"></div>
+                <div class="gridSection" id="sectionOne" value="'1'" onclick="takeTurnOne()"></div>
+                <div class="gridSection" id="sectionTwo" value="2" onclick="takeTurnTwo()"></div>
+                <div class="gridSection" id="sectionThree" value="3" onclick="takeTurnThree()"></div>
+                <div class="gridSection" id="sectionFour" value="4" onclick="takeTurnFour()"></div>
+                <div class="gridSection" id="sectionFive" value="5" onclick="takeTurnFive()"></div>
+                <div class="gridSection" id="sectionSix" value="6" onclick="takeTurnSix()"></div>
+                <div class="gridSection" id="sectionSeven" value="7" onclick="takeTurnSeven()"></div>
+                <div class="gridSection" id="sectionEight" value="8" onclick="takeTurnEight()"></div>
+                <div class="gridSection" id="sectionNine" value="9" onclick="takeTurnNine()"></div>
             </section>
         </main>
 
